# glmax

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploydocs.yml
.plans/design-plans/: 2026-03-17-params-disp-aux.md  2026-03-19-glm-diagnostics.md
.plans/design-plans/artifacts/2026-03-17-params-disp-aux/: equation-to-code-map.md  (+2 more)
.plans/implementation-plans/2026-03-17-params-disp-aux/: README.md  phase_01.md  phase_02.md  phase_03.md  phase_04.md  test-requirements.md
.plans/implementation-plans/2026-03-19-glm-diagnostics/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  test-requirements.md
docs/: authors.md  conf.py  from-statsmodels.md  guide.md  index.md  index.rst  jax-transformations.md  release-notes.md
docs/_scripts/: extension.py
docs/api/: check.md  families-and-links.md  family.md  fitters.md  glm.md  inference.md  nouns.md  predict.md  verbs.md
docs/api/fit/: index.md  strategies.md
docs/api/infer/: index.md  strategies.md
docs/api/specify/: families-and-links.md  index.md
docs/design-plans/: 2026-03-04-glm-fit-api.md  2026-03-04-glmax-fit-pipeline-redesign.md  2026-03-05-glm-inference-grammar.md  2026-03-16-inferrer-abstraction.md
docs/implementation-plans/2026-03-04-glm-fit-api/: phase_02.md  phase_05.md
docs/implementation-plans/2026-03-04-glmax-fit-pipeline-redesign/: handoff.md  risk_log.md
docs/implementation-plans/2026-03-06-expfam-port/: phase_06.md
docs/implementation-plans/2026-03-06-infer-seam-consolidation/: phase_01.md
docs/implementation-plans/2026-03-16-inferrer-abstraction/: phase_02.md  phase_03.md  test-requirements.md
docs/test-plans/: 2026-03-04-glm-fit-api.md  2026-03-04-glmax-fit-pipeline-redesign.md  2026-03-17-params-disp-aux.md  2026-03-19-glm-diagnostics.md
examples/: benchmark_colab.ipynb
src/glmax/: __init__.py  _misc.py  _version.py  contracts.py  data.py  diagnostics.py  fit.py  glm.py  predict.py  skeleton.py
src/glmax/Infer/: __init__.py  glm.py  optimize.py  solve.py  stderr.py
src/glmax/_fit/: __init__.py  fit.py  irls.py  newton.py  solve.py  types.py
src/glmax/_infer/: __init__.py  hyptest.py  infer.py  stderr.py  types.py
src/glmax/family/: __init__.py  dist.py  distribution.py  links.py  utils.py
src/glmax/infer/: __init__.py  contracts.py  diagnostics.py  fitter.py  fitters.py  inference.py  inferrer.py  optimize.py  result.py  solve.py  solvers.py  state.py  stderr.py  tests.py
tests/: conftest.py  test_boundaries.py  test_check_verbs.py  test_expfam_review_fixes.py  test_expfam_subcomponent_b.py  test_fit_api.py  test_fit_predict.py  test_fitters.py  test_gamma.py  test_glm.py  test_grammar_contracts.py  test_infer_seam.py  test_infer_verbs.py  test_inferrers.py  test_phase5_tasks.py  test_skeleton.py  testing_testing_123.py  utils.py
tests/_fit/: test_fit_predict.py  test_fitters.py
tests/_infer/: test_infer_seam.py  test_infer_verbs.py  test_inferrers.py
tests/data/: test_boundaries.py  test_glmdata.py
tests/diagnostics/: conftest.py  test_check.py  test_check_verbs.py  test_gof.py  test_influence.py  test_residuals.py
tests/family/: test_expfam_subcomponent_a.py  test_families.py  test_links.py
tests/fit/: test_fit.py  test_jvp.py  test_newton.py  test_predict.py
tests/glm/: test_glm.py
tests/infer/: test_hypothesis.py  test_infer.py  test_stderr.py
tests/package/: test_api.py  test_fit_api.py  test_grammar.py  test_grammar_contracts.py  test_phase5_tasks.py
tools/: worktree-python
(+11 files in other folders)
